--- a/src/pages/contacts/contacts.scss
+++ b/src/pages/contacts/contacts.scss
@@ -2,7 +2,10 @@ page-contacts {
   .item-divider-md {
     font-size: 1.8rem;
     color: #fff;
-    background-color: #f88418;
-    font-weight: 500;
+    background-color: #C400FF;
+    font-weight: 600;
+  }
+  ion-reorder ion-icon {    
+    color: #C400FF;
   }
 }
