--- a/src/pages/intro/intro.scss
+++ b/src/pages/intro/intro.scss
@@ -1,82 +1,106 @@
 page-intro {
-  .swiper-pagination-bullet-active {
-    background: #fff;
+  // .swiper-pagination-bullet-active {
+  //   background: #fff;
+  // }
+  // .toolbar-background {
+  //   background: transparent;
+  //   border-color: transparent;
+  // }
+  // .slide-zoom {
+  //   height: 100%;
+  //   /*background: linear-gradient(to bottom right, rgb(233, 44, 75), #5691c8);*/
+  //   background: linear-gradient(to bottom right, #FF9800, #F44336);
+  //   border-color: transparent;
+  //   cursor: pointer;
+  // }
+  // .slide-title {
+  //   margin-top: 2.8rem;
+  //   color: #fff;
+  // }
+  // .slide-image {
+  //   max-height: 50%;
+  //   max-width: 60%;
+  //   margin: 18px 0;
+  //   margin-top: 80px;
+  //   -webkit-box-shadow: 0px 0px 10px 5px rgb(255, 255, 255);
+  //   box-shadow: 0px 0px 10px 5px rgb(255, 255, 255);
+  //   background: #fff;
+  // }
+  // b {
+  //   font-weight: 500;
+  // }
+  // p {
+  //   padding: 0 40px;
+  //   font-size: 14px;
+  //   line-height: 1.5;
+  //   color: #fff;
+  //   b {
+  //     color: #000000;
+  //     font-size: 18px;
+  //   }
+  // }
+  // .bar-button-primary-md,
+  // .bar-button-clear-md-primary,
+  // .bar-button-md-primary {
+  //   color: #fff;
+  // }
+  // .button-clear-md-primary {
+  //   color: #fff;
+  // }
+  // .swiper-pagination-fraction,
+  // .swiper-pagination-custom,
+  // .swiper-container-horizontal>.swiper-pagination-bullets {
+  //   bottom: 80px;
+  // }
+  // .bottom-accounts-btns {
+  //   position: absolute;
+  //   z-index: 999999999;
+  //   bottom: 15px;
+  //   left: 0;
+  //   right: 0;
+  //   text-align: center;
+  // }
+  // .bottom-accounts-btns .button-md {
+  //   background: #FF9800;
+  //   font-size: 1.6em;
+  //   padding: 25px;
+  //   width: 46%;
+  //   display: inline-block;
+  // }
+  .diag {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    top: 0;
+    height: 66%;
   }
-
-  .toolbar-background {
-    background: transparent;
-    border-color: transparent;
+  ion-icon {
+    margin-top: 40%;
+    font-size: 7em;
   }
-
-  .slide-zoom {
-    height: 100%;
-    /*background: linear-gradient(to bottom right, rgb(233, 44, 75), #5691c8);*/
-    background: linear-gradient(to bottom right, #FF9800, #F44336);
-    border-color: transparent;
-    cursor: pointer;
+  h2 {
+    margin-top: 80% !important;
+    font-weight: bold;
+    font-size: 1em;
   }
-
-  .slide-title {
-    margin-top: 2.8rem;
-    color: #fff;
-  }
-
-  .slide-image {
-    max-height: 50%;
-    max-width: 60%;
-    margin: 18px 0;
-    margin-top: 80px;
-    -webkit-box-shadow: 0px 0px 10px 5px rgb(255, 255, 255);
-    box-shadow: 0px 0px 10px 5px rgb(255, 255, 255);
-    background: #fff;
-  }
-
-  b {
-    font-weight: 500;
-  }
-
   p {
-    padding: 0 40px;
-    font-size: 14px;
-    line-height: 1.5;
-    color: #fff;
-
-    b {
-      color: #000000;
-      font-size: 18px;
-    }
+    width: 80%;
+    display: block;
+    margin: 0 auto;
+    font-size: .9em;
   }
-
-  .bar-button-primary-md,
-  .bar-button-clear-md-primary,
-  .bar-button-md-primary {
-    color: #fff;
+  .swiper-pagination-bullet-active {
+    background: #C400FF;
   }
-
-  .button-clear-md-primary {
-    color: #fff;
-  }
-
-  .swiper-pagination-fraction,
-  .swiper-pagination-custom,
-  .swiper-container-horizontal>.swiper-pagination-bullets {
-    bottom: 80px;
-  }
-
+  .swiper-pagination {
+    bottom: 12% !important;
+  }  
   .bottom-accounts-btns {
     position: absolute;
-    z-index: 999999999;
-    bottom: 15px;
-    left: 0;
-    right: 0;
+    bottom: 20px;
+    cursor: pointer;
+    z-index: 5;
+    width: 100%;
     text-align: center;
-  }
-
-  .bottom-accounts-btns .button-md {
-    background: #FF9800;
-    font-size: 1.6em;
-    padding: 25px;
-    width: 46%;
-    display: inline-block;
   }
 }
