--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,8 +1,8 @@
-<ion-menu [content]="content">
+<ion-menu [content]="content" (ionOpen)="menuOpened()">
   <ion-content>
     <div class="profile-area" padding>
       <img src="assets/imgs/avatar.png" />
-      <p class="user-name">Hello Aman!</p>
+      <p class="user-name">Hello {{displayName}}!</p>
       <!-- <ion-buttons end>
         <button ion-button icon-only (click)="sort()">
           <ion-icon name="funnel"></ion-icon>
