--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,700');
 
 ion-content {
-    background-color: #EFEFEF !important;
-    font-family: 'Raleway';
+  background-color: #EFEFEF !important;
+  font-family: 'Raleway';
 }
 
 .button-md {
@@ -11,7 +11,7 @@ ion-content {
 
 .toolbar-background-md {
   background: linear-gradient(to bottom right, #C400FF, #C400FF);
-  border-color: transparent;  
+  border-color: transparent;
 }
 
 .toolbar-title-md {
@@ -58,6 +58,10 @@ ion-content {
 }
 
 ion-app.md [padding] {
+  padding: 0;
+}
+
+ion-app.ios [padding] {
   padding: 0;
 }
 
